about us alignment fix and navbar border application

--- a/src/components/navbar/navi.scss
+++ b/src/components/navbar/navi.scss
@@ -6,7 +6,7 @@
     width: 100vw;
     border-radius: 0 !important;
     letter-spacing: 2px;
-    border: none !important;
+    border-bottom: 3px solid rgb(0, 153, 255, 0.4);
     z-index: 100;
     transition: all 0.3s ease-in-out 0s;
     font-size: 2rem;
